# QAdwaitaDecorations-Catpuccin

./: .gitignore  CMakeLists.txt
src/: qadwaitadecorations.cpp  qadwaitadecorations.h
test-app/: CMakeLists.txt  main.cpp
